# dep2

./: .gitignore  Cargo.toml  Readme.md  compose.yml  design-doc.md  import-repo  mise.toml  mprocs.yaml  package.json  pnpm-lock.yaml
.hooks/: pre-commit
.mise/tasks/: build-grammar  cloc  graph  setup  storybook
crates/catalog/: Cargo.toml
crates/catalog/src/: arithmetic.rs  compare.rs  filters.rs  rule.rs
crates/debugging/: Cargo.toml
crates/debugging/src/: debugger.rs
crates/dep2/: Cargo.toml
crates/dep2-core/: Cargo.toml
crates/dep2-core/src/: engine.rs  lib.rs  string_table.rs
crates/dep2-core/tests/: engine.rs
crates/dep2-plugin/: Cargo.toml
crates/dep2-plugin-csv/: Cargo.toml
crates/dep2-plugin-csv/src/: lib.rs
crates/dep2-plugin-fs/: Cargo.toml
crates/dep2-plugin-fs/src/: lib.rs
crates/dep2-plugin-treesitter/: Cargo.toml
crates/dep2-plugin-treesitter/src/: lib.rs
crates/dep2-plugin/src/: lib.rs
crates/dep2/src/: main.rs  server.rs
crates/executing/: Cargo.toml
crates/executing/src/: aggregation.rs  arg.rs  collector.rs  compare.rs  dataflow.rs  jn.rs  lib.rs  main.rs  map.rs  transformer.rs
crates/macros/: Cargo.toml
crates/optimizing/: Cargo.toml
crates/parsing/: Cargo.toml
crates/planning/: Cargo.toml
crates/planning/src/: arguments.rs  arithmetic.rs  flow.rs  lib.rs  program.rs  rule.rs  strata.rs
crates/reading/: Cargo.toml
crates/reading/src/: arrangements.rs  epoch.rs  inspect.rs  interner.rs  lib.rs  reader.rs  rel.rs  row.rs  semiring.rs
crates/strata/: Cargo.toml
crates/strata/src/: dependencies.rs  lib.rs  rewrite.rs  stratification.rs
dbflow-core/: Cargo.toml
dbflow-core/src/: compiler.rs  engine.rs  hcl_types.rs  lib.rs  module_loader.rs  reference.rs
dbflow-core/src/compiler/: compile.rs  emit.rs  error.rs  mod.rs  rule.rs  types.rs
dbflow-core/tests/: property_tests.rs
dbflow-plugin/: Cargo.toml
dbflow-plugin-csv/: Cargo.toml
dbflow-plugin-csv/src/: lib.rs
dbflow-plugin-debezium/: Cargo.toml
dbflow-plugin-debezium/src/: lib.rs
dbflow-plugin-exec/: Cargo.toml
dbflow-plugin-exec/src/: lib.rs
dbflow-plugin-kafka/: Cargo.toml
dbflow-plugin-kafka/src/: lib.rs
dbflow-plugin-postgres/: Cargo.toml
dbflow-plugin-postgres/src/: lib.rs
dbflow-plugin/src/: lib.rs
examples/: ast_dump.dl  cloc.dl  csv_aggregate.hcl  csv_filter.hcl  csv_watch.hcl  debezium_hello.hcl  exec_watch.hcl  files.dl  import_graph.dl  js_calls.dl  js_functions.dl  kafka_alert.hcl  kafka_hello.hcl  kafka_multi_topic.hcl  poly_recursive_fns.dl  postgres_alert.hcl  postgres_hello.hcl  postgres_multi_channel.hcl  recursion.hcl  rust_calls.dl  rust_crate_coupling.dl  rust_crate_deps.dl  rust_crate_depth.dl  rust_crate_reach.dl  rust_dead_code.dl  rust_function_spans.dl  rust_functions.dl  rust_hot_fns.dl  rust_imports.dl  rust_large_functions.dl  rust_panic_audit.dl  rust_panic_propagation.dl  rust_pubcrate.dl  rust_recursive_fns.dl  rust_unused_functions.dl  rust_xcalls.dl  rust_xcalls_typed.dl  rust_xpanic.dl  server_monitor.hcl  variables.hcl
flowlog/: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  env.sh  env_test.sh
flowlog/.cargo/: config.toml
flowlog/docs/: semiring-configuration.md
flowlog/examples/facts/: arc.facts  triple.facts
flowlog/examples/facts/1000/: AddressOf.facts  Assign.facts  Load.facts  Store.facts
flowlog/examples/programs/: alias.dl  andersen.dl  antijoin.dl  bipartite.dl  cartesian.dl  crdt-fast.dl  crdt.dl  csda.dl  cspa.dl  cspa_help.dl  cycle.dl  data-flow.dl  ddisasm-test.dl  ddisasm.dl  doop-souffle.dl  doop.dl  doop_help.dl  dyck-souffle.dl  dyck.dl  galen.dl  galen_help.dl  greater_equal.dl  ground.dl  java-debug.dl  java-test.dl  java.dl  pointsto.dl  reach.dl  sg.dl  simon.dl  sip.dl  sssp.dl  tc.dl  test.dl  tri.dl  value_analysis.dl
flowlog/src/catalog/: Cargo.toml
flowlog/src/catalog/src/: arithmetic.rs  atoms.rs  compare.rs  filters.rs  head.rs  lib.rs  rule.rs
flowlog/src/debugging/: Cargo.toml
flowlog/src/debugging/src/: debugger.rs  lib.rs
flowlog/src/executing/: Cargo.toml
flowlog/src/executing/src/: aggregation.rs  arg.rs  collector.rs  compare.rs  dataflow.rs  jn.rs  lib.rs  main.rs  map.rs  transformer.rs
flowlog/src/macros/: Cargo.toml
flowlog/src/macros/src/: lib.rs
flowlog/src/optimizing/: Cargo.toml
flowlog/src/optimizing/src/: optimizer.rs
flowlog/src/parsing/: Cargo.toml
flowlog/src/parsing/src/: aggregation.rs  arithmetic.rs  compare.rs  decl.rs  grammar.pest  head.rs  lib.rs  main.rs  parser.rs  rule.rs
flowlog/src/planning/: Cargo.toml
flowlog/src/planning/src/: arguments.rs  arithmetic.rs  collections.rs  compare.rs  constraints.rs  flow.rs  lib.rs  main.rs  program.rs  rule.rs  strata.rs  transformations.rs
flowlog/src/reading/: Cargo.toml
flowlog/src/reading/examples/: check_config.rs
flowlog/src/reading/src/: arrangements.rs  config.rs  epoch.rs  inspect.rs  lib.rs  reader.rs  rel.rs  row.rs  semiring.rs  session.rs
flowlog/src/strata/: Cargo.toml
flowlog/src/strata/src/: dependencies.rs  lib.rs  main.rs  stratification.rs
flowlog/tool/: check.sh  correctness.sh  correctness_test.sh  env.sh  optimization.sh  optimization_test.sh  time.sh
hcl-flowlog-core/: Cargo.toml
hcl-flowlog-core/src/: compiler.rs  hcl_types.rs  lib.rs  module_loader.rs  reference.rs
hcl-flowlog-core/tests/: property_tests.proptest-regressions  property_tests.rs
scripts/: build-grammar.sh
src/: compiler.rs  lib.rs  main.rs
tests/: csv_streaming.rs  e2e.proptest-regressions  e2e.rs  kafka_streaming.rs  postgres_streaming.rs  property_tests.rs
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/src/: App.tsx  DataView.module.css  DataView.tsx  ForceGraph.tsx  Graph.tsx  Hud.module.css  Hud.tsx  RulesView.module.css  RulesView.tsx  ViewSwitch.module.css  ViewSwitch.tsx  api.ts  cytoscape-fcose.d.ts  db.ts  dlHighlight.ts  main.tsx  model.ts  perf.ts  spec.ts  styles.css  useGraphData.ts  useRawData.ts
web/tests/: e2e.spec.ts  gpufps.mjs
(+12 files in other folders)
