[workspace]
resolver = "2"
members = [
    "flowlog/src/debugging",
    "flowlog/src/parsing",
    "flowlog/src/strata",
    "flowlog/src/catalog",
    "flowlog/src/optimizing",
    "flowlog/src/planning",
    "flowlog/src/reading",
    "flowlog/src/executing",
    "flowlog/src/macros",
    "hcl-flowlog-core",
]

[workspace.dependencies]
timely = "0.25.1"
differential-dataflow = "0.18.0"
clap = "4.5.40"
itertools = "0.14.0"
pest = "2.8.1"
pest_derive = "2.8.1"
arrayvec = "0.7.6"
smallvec = "1.13.2"
serde = "1.0.219"
serde_json = "1.0.140"
syn = "2.0.104"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
paste = "1.0.15"
mimalloc = "0.1.47"

[package]
name = "hcl-flowlog"
version = "0.1.0"
edition = "2021"

[dependencies]
hcl-flowlog-core = { path = "hcl-flowlog-core" }

parsing = { path = "flowlog/src/parsing" }
strata = { path = "flowlog/src/strata" }
catalog = { path = "flowlog/src/catalog" }
planning = { path = "flowlog/src/planning" }
executing = { path = "flowlog/src/executing" }
reading = { path = "flowlog/src/reading", default-features = false, features = ["present-type"] }
debugging = { path = "flowlog/src/debugging" }

clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mimalloc = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
