[workspace]
resolver = "2"
members = [
    "flowlog/src/debugging",
    "flowlog/src/parsing",
    "flowlog/src/strata",
    "flowlog/src/catalog",
    "flowlog/src/optimizing",
    "flowlog/src/planning",
    "flowlog/src/reading",
    "flowlog/src/executing",
    "flowlog/src/macros",
    "dbflow-core",
    "dbflow-plugin",
    "dbflow-plugin-kafka",
    "dbflow-plugin-csv",
    "dbflow-plugin-postgres",
    "dbflow-plugin-exec",
    "dbflow-plugin-debezium",
]

[workspace.dependencies]
timely = "0.25.1"
differential-dataflow = "0.18.0"
clap = "4.5.40"
itertools = "0.14.0"
pest = "2.8.1"
pest_derive = "2.8.1"
arrayvec = "0.7.6"
smallvec = "1.13.2"
serde = "1.0.219"
serde_json = "1.0.140"
syn = "2.0.104"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
paste = "1.0.15"
mimalloc = "0.1.47"

[package]
name = "dbflow"
version = "0.1.0"
edition = "2021"

[dependencies]
dbflow-core = { path = "dbflow-core" }
dbflow-plugin-kafka = { path = "dbflow-plugin-kafka" }
dbflow-plugin-csv = { path = "dbflow-plugin-csv" }
dbflow-plugin-postgres = { path = "dbflow-plugin-postgres" }
dbflow-plugin-exec = { path = "dbflow-plugin-exec" }
dbflow-plugin-debezium = { path = "dbflow-plugin-debezium" }

clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mimalloc = { workspace = true }
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
proptest = "1"
testcontainers-modules = { version = "0.14", features = ["kafka", "postgres", "blocking"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
postgres = "0.19"
dbflow-core = { path = "dbflow-core" }
dbflow-plugin = { path = "dbflow-plugin" }
dbflow-plugin-csv = { path = "dbflow-plugin-csv" }
dbflow-plugin-kafka = { path = "dbflow-plugin-kafka" }
dbflow-plugin-postgres = { path = "dbflow-plugin-postgres" }
dbflow-plugin-exec = { path = "dbflow-plugin-exec" }
dbflow-plugin-debezium = { path = "dbflow-plugin-debezium" }
libc = "0.2"
