[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
timely = "=0.30.0"
differential-dataflow = "=0.24.0"
clap = "4.5.40"
itertools = "0.14.0"
pest = "2.8.1"
pest_derive = "2.8.1"
arrayvec = "0.7.6"
smallvec = "1.13.2"
serde = "1.0.219"
serde_json = "1.0.140"
syn = "2.0.104"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
paste = "1.0.15"
mimalloc = "0.1.47"

[profile.dev]
# Reduced debug info to avoid linker relocation overflow with PROD_MAX=6
debug = 1

# Optimize dependencies (timely / differential-dataflow / wasmtime are the hot
# path) even in debug builds, so a debug `dep2` runs close to release speed while
# our own crates stay at opt-level 0 for fast incremental rebuilds. Deps are
# compiled once at -O3 and cached.
[profile.dev.package."*"]
opt-level = 3

# The engine's hot path (row handling, joins, arrangements, codegen'd operators)
# lives in our own crates, so optimize those too — otherwise a debug run pays
# -O0 on the per-row inner loops. These crates change rarely, so the one-time
# -O3 compile is cached; the app crates (dep2, dep2-core) stay at -O0 for fast
# iteration.
[profile.dev.package.reading]
opt-level = 3
[profile.dev.package.executing]
opt-level = 3
[profile.dev.package.planning]
opt-level = 3
[profile.dev.package.catalog]
opt-level = 3
