[package]
name = "dbflow-core"
version = "0.1.0"
edition = "2021"

[dependencies]
dbflow-plugin = { path = "../dbflow-plugin" }
parsing = { path = "../flowlog/src/parsing" }
strata = { path = "../flowlog/src/strata" }
catalog = { path = "../flowlog/src/catalog" }
planning = { path = "../flowlog/src/planning" }
executing = { path = "../flowlog/src/executing" }
reading = { path = "../flowlog/src/reading", default-features = false, features = ["isize-type"] }
debugging = { path = "../flowlog/src/debugging" }
tracing = { workspace = true }
hcl-rs = "0.19.4"
indexmap = "2"
crossbeam-channel = "0.5"

[dev-dependencies]
proptest = "1"
tempfile = "3"
