[workspace]
resolver = "2"
members = [
    "src/debugging",
    "src/parsing", 
    "src/strata",
    "src/catalog",
    "src/optimizing",
    "src/planning",
    "src/reading",
    "src/executing",
    "src/macros",
]

[workspace.dependencies]
timely = "0.21.1"
differential-dataflow = { git = "https://github.com/hdz284/differential-dataflow.git", branch = "master" }
clap = "4.5.40"
itertools = "0.14.0"
pest = "2.8.1"
pest_derive = "2.8.1"
arrayvec = "0.7.6"
smallvec = "1.13.2"
serde = "1.0.219"
serde_json = "1.0.140"
syn = "2.0.104"
quote = "1.0.40"
proc-macro2 = "1.0.95"
paste = "1.0.15"
mimalloc = "0.1.47"


