[package]
name = "catalog"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsing = { path = "../parsing" }  
strata = { path = "../strata" }  

tracing = { workspace = true }