[package]
name = "planning"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
tracing = { workspace = true }

parsing = { path = "../parsing" }  
strata = { path = "../strata" }  
catalog = { path = "../catalog" }  
optimizing = { path = "../optimizing" }  
