[package]
name = "executing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debugging = { path = "../debugging" }  
parsing = { path = "../parsing" }  
strata = { path = "../strata" }  
catalog = { path = "../catalog" }  
planning = { path = "../planning" }
reading = { path = "../reading" }
macros = { path = "../macros" }


clap = { workspace = true, features = ["derive"] }
itertools = { workspace = true }

timely = { workspace = true }
differential-dataflow = { workspace = true }

# timely = "0.12.0"
# differential-dataflow = { path = "/Users/hangdong/.cargo/registry/src/index.crates.io-6f17d22bba15001f/differential-dataflow-0.12.0" }
# differential-dataflow = "0.13.1"
# differential-dataflow = { path = "/users/hangdong/differential" }
arrayvec = { workspace = true }
mimalloc = { workspace = true }



