[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[features]
default = ["present-type"]
present-type = ["reading/present-type"]
isize-type = ["reading/isize-type"]

[dependencies]
reading = { path = "../reading", default-features = false }


syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
itertools = { workspace = true }


[lib]
proc-macro = true