[package]
name = "reading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely = "0.20.0"
differential-dataflow = "0.14.2"
# differential-dataflow = { path = "/Users/hangdong/.cargo/registry/src/index.crates.io-6f17d22bba15001f/differential-dataflow-0.12.0" }
# differential-dataflow = { path = "/users/hangdong/differential" }

parsing = { path = "../parsing" }  
smallvec = "1.13.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrayvec =  { version = "0.7.6", features = ["serde"] }
paste = "1.0.15"