[package]
name = "strata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsing = { path = "../parsing" }  

itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }